feat: remove link to user show page from landing page

--- a/app/views/shared/_existing_users.html.erb
+++ b/app/views/shared/_existing_users.html.erb
@@ -1,6 +1,6 @@
 <h2>Existing Users</h2>
 <% @users.each do |user| %>
 <ul>
-  <li id="user_<%= user.id %>"><%= link_to user.email, "/users/#{user.id}" %></li>
+  <li id="user_<%= user.id %>"><%= user.email %></li>
 </ul>
 <% end %>
