refactor: update routing to remove user/:id from URIs and adjust associated tests, controllers, views

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <h2><%= @facade.movie_title %></h2>
 
-<%= button_to 'Discover Page', user_discover_path(@user.id), method: :get  %>
-<%= button_to 'Create Viewing Party', new_user_movie_viewing_party_path(@user, @facade.movie_id), method: :get  %>
+<%= button_to 'Discover Page', discover_path, method: :get  %>
+<%= button_to 'Create Viewing Party', new_movie_viewing_party_path( @facade.movie_id), method: :get  %>
 
 <p>Vote Average: <%= @facade.movie_vote_average %></p>
 <p>Runtime: <%= format_runtime(@facade.movie_runtime) %></p>
