--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,4 +12,10 @@
 <% else %>
   <%= link_to "Log In", login_path %><br>
   <%= link_to "Create New User", register_path %><br>
+
+<p>To demo this app, log in using this information!</p>
+<ul>
+  <li>Email: <b>test@test.com</b></li>
+  <li>Password: <b>test</b></li>
+</ul>
 <% end %>
