add 'my parties' button to '/' when logged in

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <% if session[:user_id] %>
   <%= link_to "Log Out", logout_path %><br>
+  <%= link_to "My Parties", dashboard_path %><br>
 
   <h3>Existing Users</h3>
 
