--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <header>
+    <%= link_to "Home", root_path %>
+  </header>
   <head>
     <title>ViewingPartyLite7</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
