--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,4 @@
 <p> All Users </p>
 <% @users.each do |user| %>
-  <p>
-  Name: <%= user.name %>
-  </p>
+  <%= link_to user.name, "users/#{user.id}" %>
 <% end %>
