--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Viewing Party</h1>
 
+<ul class="user-list">
+  <% @users.each do |user| %>
+    <%= link_to "#{user.name}", "/users/#{user.id}" %>
+  <% end %>
+</ul>
+<%= button_to "Create New User", register_path %>
