refactor feature test for users

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <p> Registration </p>
-<%= form_with url: "/users", method: :post do |f| %>
+<%= form_with url: "/users", method: :post, data: { turbo: false } do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :email %>
