add title and nav bar to layouts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+    <div id="nav-bar">
+      <%= link_to "Home", root_path %>
+    </div>
+    <div id="title">
+      <h1>Viewing Party</h1>
+    </div>
     <%= yield %>
   </body>
 </html>
