center the title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div id="nav-bar">
       <%= link_to "Home", root_path %>
     </div>
-    <div id="title">
+    <div id="title" style="text-align: center;">
       <h1>Viewing Party</h1>
     </div>
     <%= yield %>
