--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div id="nav-bar">
+    <div id="nav-bar" style="text-align: right;">
       <%= link_to "Home", root_path %>
     </div>
     <div id="title" style="text-align: center;">
