--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
-<h3>"Register New User"</h3>
+<h3>Register New User</h3>
 
-<%= form_with model: @user, local: true do |form| %>
+<%= form_with model: @user, url: users_path(@user), data: {turbo: false }, local: true do |form| %>
   <%= form.label :name %>
-  <%= form.text_field :name %>
+  <%= form.text_field :name %><br>
   <%= form.label :email %>
-  <%= form.text_field :email %>
+  <%= form.text_field :email %><br>
   <%= form.submit 'Create' %>
 <% end %>
 
