Updates routes with root route and updates spec with root_path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <nav> <%= link_to "Home", "/" %> </nav>
+    <nav> <%= link_to "Home", root_path %> </nav>
     <%= yield %>
   </body>
 </html>
