Feat: add flash_message and move to "Viewing Party" title to layouts/application body.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   </head>
 
   <body>
+    <%= flash_message %><br>
     <%= link_to "Home", root_path %>
+    <h1>Viewing Party</h1>
     <%= yield %>
   </body>
 </html>
