--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,11 @@
   <body>
     <%= link_to "Return Home", "/" %> 
     <%= yield %>
+    <% flash.each do |type, notice| %>
+          <h5 class="text-info"><b><%= notice %></b></h5>
+        <% end %>
   </body>
+
+
+
 </html>
