--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h3>Register a New User<h3>
 
-<%= form_with model: @user do |f| %>
+<%= form_with model: @user, method: :post, url: users_path do |f| %>
   <h4><%= f.label :name, 'Name:'%></h4>
   <%= f.text_field :name %><br>
 
