--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
     <%= javascript_importmap_tags %>
   </head>
 
+  <% flash.each do |type, msg| %>
+    <div id="flash-message">
+      <%= msg %>
+    </div>
+  <% end %>
+
   <body>
     <%= yield %>
   </body>
