--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @user.name %>'s Dashboard</h1>
 
-<%= button_to "Discover Movies", "/users/#{@user.id}/discover"%>
+<%= button_to "Discover Movies", user_discover_index_path(@user), method: :get %>
 
 <div id="viewing-parties">
   <h2>Viewing Parties</h2>
