--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1><center>Viewing Party</h1>
 
-<%= button_to "Create New User", new_user_path, method: :get %>
+<%= button_to "Create New User", register_path, method: :get %>
 
 <h3>Users</h3>
 <ul>
