add global flash messages to application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,12 @@
   </head>
 
   <body>
-    <%= flash_message %><br>
+    <div class="container">
+        <% flash.each do |type, notice| %>
+          <h5 class="text-info"><b><%= notice %></b></h5>
+        <% end %>
+    </div>
+
     <%= link_to "Home", root_path %>
     <h1>Viewing Party</h1>
     <%= yield %>
