--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,6 @@
   <h1><%= "#{@user.name}'s Dashboard" %></h1>
 </div>
 
-<%= button_to "Discover Movies", '/users/:id/discover', method: :get %>
+<%= button_to "Discover Movies", discover_path(@user.id), method: :get %>
 
 <h3>Viewing Parties</h3>
