--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,10 +4,32 @@
 <p><%= button_to "Discover Movies", user_discover_index_path(@user), method: :get %></p>
 
 <div class="attending">
-<h4> <%= "#{@user.name}'s Watch Parties: Attending" %></h4>
-
+  <h4><%= "#{@user.name}'s Watch Parties: Attending" %></h4>
+  <ol>
+    <% @user.movie_watch_parties.sort_attending.each do |p| %>
+      <li><p>Movie: <%=  p.watch_party.movie.title %></p></li>
+          <p>Watch Date: <%=  p.watch_party.date %></p>
+          <p>Start Time: <%=  p.watch_party.start_time %></p>
+          <p>Attendees: </p>
+          <% p.watch_party.users.each do |u| %>
+            <% u.movie_watch_parties.each do |party| %>
+              <% if party.user_status == "hosting" %>
+                <%= "#{u.name} is the host"%><br>
+              <% else %>
+                <%= u.name %><br>
+              <% end %>
+            <% end %>
+          <% end %>
+    <% end %>
+  </ol>
 </div>
-
 <div class="hosting">
-
+  <h4><%= "#{@user.name}'s Watch Parties: Hosting" %></h4>
+  <ol>
+    <% @user.movie_watch_parties.sort_hosting.each do |p| %>
+      <li><p>Movie: <%=  p.watch_party.movie.title %></p></li>
+          <p>Watch Date: <%=  p.watch_party.date %></p>
+          <p>Start Time: <%=  p.watch_party.start_time %></p>
+    <% end %>
+  </ol>
 </div>
