--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,14 +11,12 @@
           <p>Watch Date: <%=  p.watch_party.date %></p>
           <p>Start Time: <%=  p.watch_party.start_time %></p>
           <p>Attendees: </p>
-          <% p.watch_party.users.each do |u| %>
-            <% u.movie_watch_parties.each do |party| %>
-              <% if party.user_status == "hosting" %>
-                <%= "#{u.name} is the host"%><br>
+          <% p.watch_party.movie_watch_parties.each do |u| %>
+              <% if u.user_status == "hosting" %>
+                <%= "Host: #{u.user.name}"%><br>
               <% else %>
-                <%= u.name %><br>
+                <%= u.user.name %><br>
               <% end %>
-            <% end %>
           <% end %>
     <% end %>
   </ol>
@@ -30,6 +28,14 @@
       <li><p>Movie: <%=  p.watch_party.movie.title %></p></li>
           <p>Watch Date: <%=  p.watch_party.date %></p>
           <p>Start Time: <%=  p.watch_party.start_time %></p>
+          <p>Attendees: </p>
+          <% p.watch_party.movie_watch_parties.each do |u| %>
+              <% if u.user_status == "hosting" %>
+                <%= "Host: #{u.user.name}"%><br>
+              <% else %>
+                <%= u.user.name %><br>
+              <% end %>
+          <% end %>
     <% end %>
   </ol>
 </div>
