--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
-<p> Name: <%= @user.name %></p>
+<h3> <%= @user.name %>'s Dashboard </h3>
 <p> Email: <%= @user.email %></p>
+
+<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get  %>
