--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,1 +1,1 @@
-<%= button_to 'Discover Top Rated Movies', "/users/#{@user.id}/movies", method: :get  %>
+<%= button_to 'Discover Top Rated Movies', user_movies_path(@user), method: :get  %>
