Feat: User Dashboard Page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,6 @@
-<%= @user.name %>
+<h1><%= @user.name %>'s Dashboard </h1>
+<p><%= button_to "Discover Movies" %></p>
+
+<div id=parties>
+  <h3>Available Viewing Parties</h3>
+</div>
