Refactor: RM double title and change button text

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,4 @@
-<h1> Viewing Party </h1>
-
-<%= button_to "Register", "/register", {method: "get"} %>
+<%= button_to "Create a New User", "/register", {method: "get"} %>
 <br>
 
 <div id="current-users">
