--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,12 @@
 <p> Email: <%= @user.email %></p>
 
 <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get  %>
+
+<section id="viewing_parties">
+  <h4> Viewing Parties </h4>
+  <ol>
+    <% @viewing_parties.each do |party| %>
+      <li><%= party.movie_title %> Viewing Party </li>
+    <% end %>
+  </ol>
+</section>
