--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @user.name %>'s Dashboard </h1>
-<p><%= button_to "Discover Movies" %></p>
+<p><%= button_to "Discover Movies", user_discover_index_path(@user.id), method: :get %></p>
 
 <div id=parties>
   <h3>Available Viewing Parties</h3>
