Adds user model to form view, updates user controller with private params method, adds flash method to application html file. All tests passing.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
 
   <body>
     <nav> <%= link_to "Home", root_path %> </nav>
+    <% flash.each do |type, msg| %>
+    <div>
+      <%= msg %>
+    </div>
+  <% end %>
     <%= yield %>
   </body>
 </html>
