--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
   <%= link_to "Home", root_path %>
+  <h1><center>Viewing Party</h1>
   <div class="container">
         <% flash.each do |type, notice| %>
           <h5 class="text-info"><b><%= notice %></b></h5>
