--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,7 @@
-<h1><center>Viewing Party</h1>
 
-<%= button_to "Create New User", register_path, method: :get %>
+<%= button_to "Create New User", register_path, method: :get %><center>
 
-<h3>Users</h3>
+<h3>Existing Users</h3>
 <ul>
 <% @users.each do |user| %>
   <li><%= link_to "#{user.name}", user_path(user) %></li>
