--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
 <h2><center><%= @user.name %>'s Dashboard</h2>
-<%= button_to 'Discover Movies', user_path(@user) %>
+<%= button_to 'Discover Movies', "/users/#{@user.id}/discover", method: :get %>
