add parties hosting method to user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,17 @@
 
 <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get  %>
 
-<section id="viewing_parties">
-  <h4> Viewing Parties </h4>
+<section id="viewing_parties_hosting">
+  <h4> Viewing Parties I'm Hosting </h4>
+  <ol>
+    <% @viewing_parties.each do |party| %>
+      <li><%= party.movie_title %> Viewing Party </li>
+    <% end %>
+  </ol>
+</section>
+
+<section id="viewing_party_invitations">
+  <h4> Viewing Party Invitations </h4>
   <ol>
     <% @viewing_parties.each do |party| %>
       <li><%= party.movie_title %> Viewing Party </li>
