--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h3 id="title"><%= "#{@user.name}'s Dashboard" %></h3>
 
-<%= button_to "Discover Movies", user_discover_index_path(@user.id) %>
+<%= button_to "Discover Movies", user_discover_index_path(@user.id), {method: "get"} %>
 <br>
 
 <section id="viewing-parties">
