Fix: edit users#show path.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
   <h3>Existing Users</h3>
   <% @users.each do |user| %>
     <ul>
-    <li><%= link_to "#{user.email}", "/users/:id" %></li>
+    <li><%= link_to "#{user.email}", user_path(user) %></li>
     </ul>
   <% end %>
 </div>
