--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Viewing Party</h1>
 <h2><%= @user.name %>'s Dashboard</h2>
 
-<p><%= button_to "Discover Movies", "/users/:id/discover" %></p>
+<p><%= button_to "Discover Movies", "/users/#{@user.id}/discover" %></p>
 
 <div id="viewing_parties">
 <h3> Viewing Parties </h3>
