--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,1 +1,11 @@
 <h1> Hi <%= @user.name %>, let's find a movie </h1>
+<p><%= button_to "Discover Top Rated Movies", user_movies_path(@user.id), method: :get %></p>
+
+<div id="search">
+  <h3> Enter keyword(s) to search by movie title </h3>
+  <%= form_with url: user_movies_path(@user.id), data: {turbo: false}, method: :get, local: true do |f|  %>
+    <%= f.label :keyword %>
+    <%= f.text_field :keyword %>
+    <%= f.submit "Search by Movie Title" %>
+  <% end %>
+</div>
