--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,6 @@
 <%= button_to 'Discover Page', user_discover_index_path(@user), method: :get %>
 
-<div class="top-rated">
+<div class="movies">
   <% @movies.each do |movie| %>
     <div class="movie">
       <div class="title"><%= movie[:title] %></div>
