--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,8 @@
 <%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
 
-<div class="movie">
-  <p class="title"></p>
-  <p class="vote_avg"></p>
-</div>
+<% @movies.each do |movie| %>
+  <div class="movie">
+      <p class="title"><%= link_to "#{movie[:title]}", user_movie_path(@user, movie[:id]) %></p>
+      <p class="vote_avg"><%= movie[:vote_average]%></p>
+  </div>
+<% end %>
