Test: vote-average

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,7 +4,7 @@
   <% @movies.each do |movie| %>
     <div class="movie">
       <div class="title"><%= movie[:title] %></div>
-      <div class="vote_average"><%= movie[:vote_average] %></div>
+      <div class="vote-average"><%= movie[:vote_average] %></div>
     </div>
   <% end %>
 </div>
