refactor api consumption with poros

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @movies.each do |movie| %>
   <div class="movie">
-      <p class="title"><%= link_to "#{movie[:title]}", user_movie_path(@user, movie[:id]) %></p>
-      <p class="vote_avg"><%= movie[:vote_average]%></p>
+      <p class="title"><%= link_to "#{movie.title}", user_movie_path(@user, movie.id) %></p>
+      <p class="vote_avg">Vote Average: <%= movie.vote_average%></p>
   </div>
 <% end %>
