add facade to movie controller

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,6 @@
 <%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
 
-<% @movies.each do |movie| %>
+<% @facade.find_movies.each do |movie| %>
   <div class="movie">
       <p class="title"><%= link_to "#{movie.title}", user_movie_path(@user, movie.id) %></p>
       <p class="vote_avg">Vote Average: <%= movie.vote_average%></p>
