--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -5,8 +5,8 @@
 
 <div class="search-movies">
   <%= form_with url: user_movies_path(@user), method: :get, local: true do |f| %>
-    <%= f.label :q, "Search:" %>
-    <%= f.text_field :q %>
+    <%= f.label :keyword, "Search:" %>
+    <%= f.text_field :keyword %>
     <%= f.submit "Find Movies" %>
   <% end %>
 </div>
