--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,5 +5,5 @@
 <%= form_with url: "/users/#{@user.id}/movies", method: :get, local: true do |form| %>
   <%= form.label "Search by Title" %>
   <%= form.text_field :keyword %>
-  <%= form.submit, "Search" %>
+  <%= form.submit "Search" %>
 <% end %>
