add movies index page for user

--- a/app/views/discover/discover.html.erb
+++ b/app/views/discover/discover.html.erb
@@ -3,12 +3,5 @@
   <%= form.text_field :search %>
   <%= form.submit 'Search' %>
 <% end %>
-<% if @movie %>
-  <h5>Movie <%= @movie[:title] %> was found! %></h5>
-<% end %>
 
-<% @facade.movies.each do |movie| %>
-  <ul class="member">
-    <li class="name"><%= movie.title %></li>
-  </ul>
-<% end %>
+<%= button_to "Top Rated Movies", "/users/:user_id/movies", method: :get %>
