feat link in user discover takes user to movies discover page

--- a/app/views/discover/discover.html.erb
+++ b/app/views/discover/discover.html.erb
@@ -4,4 +4,4 @@
   <%= form.submit 'Search' %>
 <% end %>
 
-<%= button_to "Top Rated Movies", "/users/:user_id/movies", method: :get %>
+<%= button_to "Top Rated Movies", "/users/#{@user.id}/movies", method: :get %>
