--- a/app/views/discover/discover.html.erb
+++ b/app/views/discover/discover.html.erb
@@ -1,7 +1,7 @@
-<%= form_with url: "/users/user_id/discover", local: true do |form| %>
-  <%= form.label :search, 'Search For Movies' %>
-  <%= form.text_field :search %>
-  <%= form.submit 'Search' %>
+<%= form_with url: "/users/#{@user.id}/movies", method: :get, local: true do |f| %> <br>
+  <%= f.label "Search for Movies:" %> <br>
+  <%= f.text_field :search %> <br>
+  <%= f.submit "Search" %>
 <% end %>
 
 <%= button_to "Top Rated Movies", "/users/#{@user.id}/movies", method: :get %>
