--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<p> <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: "get" %> </p>
+<p> <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %> </p>
 <h2>Movies<% @movies.each do |movie| %></h2>
-  <p><%= movie.title %></p>
+  <p><%= link_to movie.title, "/users/#{@user.id}/movies/#{movie.id}" %></p>
 <% end %>
