--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -4,7 +4,8 @@
 <br>
 
 <div id="movie-search">
-  <%= form_with url: user_movies_path(@user.id), local: true do |form| %>
+  <%= form_with url: user_movies_path(@user.id), local: true, method: :get do |form| %>
+    <%= form.hidden_field value: :search %>
     <%= form.label :search, "Movie Title: " %>
     <%= form.text_field :search %>
     <%= form.submit "Find Movies" %>
