--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,6 +4,7 @@
   <% @movies.each do |movie| %>
     <div class="movie">
       <div class="title"><%= link_to movie[:title], url: "/users/#{@user}/movies/#{movie[:id]}" %></div>
+      <#% require 'pry'; binding.pry %>
       <div class="vote-average"><%= movie[:vote_average] %></div>
     </div>
   <% end %>
