--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,2 +1,9 @@
 <br><%= link_to "Movie Discover Page", "/users/#{@user.id}/discover", method: :get %>
 <h2> Movies watched </h2>
+
+<h2> Top Rated Movies </h2>
+<% require 'pry'; binding.pry %>
+<%= @facade.movies.each do |movie| %>
+  <%= movie.title %>
+  <%= movie.rating %>
+<% end %>
