--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,9 +2,9 @@
 
 <nav><%= button_to 'Discover Page', discover_path, method: :get %></nav>
 
-<% @movies.each do |movie| %>
-<li class ="movie">
-  <ul>Movie Title: <%= link_to movie.title, movie_show_path(movie.id, @user), method: :get %> </ul>
-  <ul>Vote Average: <%= movie.vote_average %></ul>
-</li>
+<% @facade.movies.each do |movie| %>
+  <li class ="movie">
+    <ul>Movie Title: <%= link_to movie.title, movie_show_path(movie.id, @user), method: :get %> </ul>
+    <ul>Vote Average: <%= movie.vote_average %>/ 10</ul>
+  </li>
 <% end %>
