--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,6 @@
 <div id="current-users">
   <h3> Current Users </h3>
   <% @users.each do |user| %>
-    <li><%= link_to "#{user.name}", "/dashboard" %></li>
+    <li><%= link_to "#{user.name}", user_path(user.id) %></li>
   <% end %>
 </div>
