Refactor: Symbolize method types for buttons

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "Create a New User", "/register", {method: "get"} %>
+<%= button_to "Create a New User", "/register", method: :get %>
 <br>
 
 <div id="current-users">
