--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,6 +1,6 @@
 <h3 id="title"><%= "Discover Movies" %></h3>
 
-<%= button_to "Discover Top Rated Movies", user_movies_path(@user.id), {method: "get"} %>
+<%= button_to "Discover Top Rated Movies", user_movies_path(@user.id), method: :get %>
 <br>
 
 <div id="movie-search">
