--- a/app/views/users/viewing_party/new.html.erb
+++ b/app/views/users/viewing_party/new.html.erb
@@ -5,8 +5,18 @@
   <div id="viewing-party-details">
     <h3>Viewing Party Details</h3>
     <p>Movie Title <%= @movie.title %></p>
-    
-    <p>Duration of Party <%= @movie.title %></p>
+    <%= form_with url: user_new_viewing_party_path(@user, @movie), method: :post, local: true do |form| %>
+      <%= form.label :duration %>
+      <%= form.text_field :duration, value: @movie.runtime %>
+      <%= form.label :date %>
+      <%= form.date_field :date %>
+      <%= form.label :time %>
+      <%= form.time_field :start_time%>
+
+      
+
+
+    <% end %>
   </div>
   
   
