Refactor: Change button text per wireframe

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "Back", user_discover_index_path(@facade.user_id), method: :get %>
+<%= button_to "Discover Page", user_discover_index_path(@facade.user_id), method: :get %>
 
 <section id="requested-movies">
   <% unless @facade %>
