--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,2 +1,4 @@
 <p> <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %> </p>
-<p> <%= button_to "Create Viewing Party", "/users/#{@user.id}/movies/#{@movies.id}/viewing-party/new", method: :get %> </p>
+<p> <%= button_to "Create Viewing Party", "/users/#{@user.id}/movies/#{@movie.id}/viewing-party/new", method: :get %> </p>
+
+<p>Movie Title: <%= @movie.title %></p>
