--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,19 @@
 <p> <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %> </p>
-<p> <%= button_to "Create Viewing Party", "/users/#{@user.id}/movies/#{@movie.id}/viewing-party/new", method: :get %> </p>
+<p> <%= button_to "Create Viewing Party", "/users/#{@user.id}/movies/#{@movie.id}/viewing_party/new", method: :get %> </p>
 
-<p>Movie Title: <%= @movie.title %></p>
+<h1>Movie Title:</h1>
+<%= @movie.title %> <br>
+
+<h3>Movie Vote Average:</h3>
+<%= @movie.vote_average %> <br>
+
+<h3>Movie Runtime:</h3>
+<%= @movie.runtime %> <br>
+
+<h3>Movie Genres:</h3>
+<% @movie.genres.each do |genre| %>
+  <%= genre[:name] %> 
+  <% end %> <br>
+
+<h3>Movie Summary:</h3>
+<%= @movie.summary %> <br>
