Feat: titles of movies are link to show page

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,8 +3,7 @@
 <div class="movies">
   <% @movies.each do |movie| %>
     <div class="movie">
-      <div class="title"><%= link_to movie.title, url: "/users/#{@user}/movies/#{movie.id}" %></div>
-      <#% require 'pry'; binding.pry %>
+      <div class="title"><%= link_to (movie.title), ("/users/#{@user.id}/movies/#{movie.id}")%></div>
       <div class="vote-average"><%= movie.vote_average %></div>
     </div>
   <% end %>
