refactor db tables

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,8 @@
 <div class="attending">
   <h4><%= "#{@user.name}'s Watch Parties: Attending" %></h4>
   <ol>
-    <% @user.movie_watch_parties.sort_attending.each do |p| %>
+  <% @user.movie_watch_parties.sort_attending.each do |p| %>
+    <% require 'pry'; binding.pry %>
       <li><p>Movie: <%=  link_to p.watch_party.movie.title, movie_path(p.watch_party.movie.id)%></p></li>
           <p>Watch Date: <%=  p.watch_party.date %></p>
           <p>Start Time: <%=  p.watch_party.start_time %></p>
