--- a/app/views/discover/discover.html.erb
+++ b/app/views/discover/discover.html.erb
@@ -1,17 +1,7 @@
-<%= form_with url: "/users/user_id/discover", local: true do |form| %>
-  <%= form.label :search, 'Search For Movies' %>
+<%= form_with url: user_movies_path(@user.id), local: true do |form| %>
+  <%= form.label :search, "Search For Movies" %>
   <%= form.text_field :search %>
-  <%= form.submit 'Search' %>
+  <%= form.submit "Search For Movie" %>
 <% end %>
 
-<% if @movie %>
-  <h5>Movie <%= @movie[:title] %> was found! %></h5>
-<% end %>
-
-<% @facade.movies.each do |movie| %>
-  <ul class="member">
-    <li class="name"><%= movie.title %></li>
-  </ul>
-<% end %>
-
-<p><%= button_to "Discover Top Rated Movies", method: :get %></p>
+<p><%= button_to "Discover Top Rated Movies", user_movies_path(@user.id), method: :get %></p>
