--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -22,3 +22,7 @@
 
 
 <h3>Movie Reviews:</h3>
+<% @reviews.each do |review| %>
+  <%= review.author %> <%= review.rating %> <br>
+  <%= review.content %> <br> <br>
+  <% end %> <br>
