--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,8 +3,8 @@
 <%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
 
 <h5 class="vote_avg">Vote: <%= @movie_facade.show_movie_details.vote_average %></h5>
-<h5 class="runtime">Vote: <%= @movie_facade.show_movie_details.runtime %></h5>
-<h5 class="genre">Vote: <%= @movie_facade.show_movie_details.genres.join(', ') %></h5>
+<h5 class="runtime">Runtime: <%= @movie_facade.show_movie_details.runtime %></h5>
+<h5 class="genre">Genre: <%= @movie_facade.show_movie_details.genres.to_sentence %></h5>
 
 </br>
 
