add hidden field value to form

--- a/app/views/users/viewing_party/new.html.erb
+++ b/app/views/users/viewing_party/new.html.erb
@@ -19,6 +19,7 @@
         <%= user.name %><br>
       <% end %><br>
 
+      <%= form.hidden_field :movie_id, value: @movie.id%>
       <%= form.submit "Create Party" %>
     <% end %>
   </div>
