--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,1 +1,5 @@
+<h2> <%= @facade.movie_title %> <h2>
+
 <%= button_to "Discover Page", user_discover_index_path(@facade.user_id), method: :get %>
+
+<%= button_to "Create Viewing Party for #{@facade.movie_title}", user_discover_index_path(@facade.user_id), method: :get %>
