Feat: Add Movie title element id

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,4 @@
-<h2> <%= @facade.movie_title %> <h2>
+<h2 id="title"> <%= @facade.movie_title %> <h2>
 
 <%= button_to "Discover Page", user_discover_index_path(@facade.user_id), method: :get %>
 
