--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,7 @@
 </div>
 
 <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get  %>
+
+<%= @user.parties.each do |party| %>
+  <%= party.movie_title(party.movie_id) %>
+<% end %>
