add button to movie show page view

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,7 @@
 <h3 class="title"><%= @movie_facade.show_movie_details.title %></h3>
 
 <%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
+<%= button_to "Create Viewing Party for #{@movie_facade.show_movie_details.title}",  new_user_movie_viewing_party_path(@user, @movie_facade.show_movie_details.id), method: :get %>
 
 <h5 class="vote_avg">Vote: <%= @movie_facade.show_movie_details.vote_average %></h5>
 <h5 class="runtime">Runtime: <%= @movie_facade.show_movie_details.runtime %></h5>
