--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,6 @@
 <h3 class="title"><%= @movie_facade.show_movie_details.title %></h3>
 
-<%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
+<%= button_to "Discover Page", user_discover_index_path(@user), method: :get %></br>
 <%= button_to "Create Viewing Party for #{@movie_facade.show_movie_details.title}",  new_user_movie_viewing_party_path(@user, @movie_facade.show_movie_details.id), method: :get %>
 
 <h5 class="vote_avg">Vote: <%= @movie_facade.show_movie_details.vote_average %></h5>
@@ -26,6 +26,6 @@
 <div class="reviews">
 <h4><%= @review_facade.show_reviews.review_count %> Reviews</h4>
   <% @review_facade.show_reviews.all_reviews.each do |review| %></p>
-    <p><%= review %></p>
+    <ul><li><%= review %></li></ul>
   <% end %>
 </div>
