--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -4,8 +4,8 @@
 <div id="search">
   <h3> Enter keyword(s) to search by movie title </h3>
   <%= form_with url: user_movies_path(@user.id), data: {turbo: false}, method: :get, local: true do |f|  %>
-    <%= f.label :keyword %>
+    <%= f.label "keyword" %>
     <%= f.text_field :keyword %>
-    <%= f.submit "Search by Movie Title" %>
+    <%= f.submit "submit" %>
   <% end %>
 </div>
